--- a/Mod-examples/detailed-basic-examplemod/detailed-basic-examplemod.html
+++ b/Mod-examples/detailed-basic-examplemod/detailed-basic-examplemod.html
@@ -152,11 +152,11 @@ public static class Config
     
     public static KeybindConfigEntry ToggleKey { get; private set; } // Adds keybind entry in your config named ToggleKey
     public static KeybindConfigEntry ToggleKey2 { get; private set; } // Adds keybind entry in your config named ToggleKey2
-    public static ConfigEntry<float> ExampleSlider { get; private set; } // Adds configentry listening to Float value
-    public static ConfigEntry<float> ExampleSlider2 { get; private set; } // Adds configentry listening to Float value
-    public static ConfigEntry<bool> ExampleToggle { get; private set; } // Adds configentry listening to Bool value
+    public static ConfigEntry&#60;float&#62; ExampleSlider { get; private set; } // Adds configentry listening to Float value
+    public static ConfigEntry&#60;float&#62; ExampleSlider2 { get; private set; } // Adds configentry listening to Float value
+    public static ConfigEntry&#60;bool&#62; ExampleToggle { get; private set; } // Adds configentry listening to Bool value
 
-    //public static ConfigEntry<bool> SomeEntry { get; private set; }
+    //public static ConfigEntry&#60;bool&#62; SomeEntry { get; private set; }
 
     public static void Init()
     {
