--- a/left-frame.html
+++ b/left-frame.html
@@ -151,6 +151,9 @@
               <li>
                 <a href="Mod-examples/getting-user-input/getting-user-input.html" target="pointed-iframe">Getting user input</a>
               </li>
+              <li>
+                <a href="Mod-examples/detailed-basic-examplemod/detailed-basic-examplemod.html" target="pointed-iframe">Detailed basic example mod</a>
+              </li>
             </ul>
           </div>
 
