adjusted some info

--- a/Cs-basics/list-and-arrays/list-and-arrays.html
+++ b/Cs-basics/list-and-arrays/list-and-arrays.html
@@ -53,8 +53,7 @@ protected override void OnGameStart()
 
         <h2>What are Arrays&#63;</h2>
         <p>
-            <b>Arrays</b> are similar to Lists, with the difference that we can't &#40;or atleast we shouldn't&#41;
-            change their content after creating them. So they basically act as read&#45;only.
+            <b>Arrays</b> are similar to Lists, with the difference that we can't change their size after creating them.
         </p>
 
         <pre><code class="language-cs">
