--- a/lessons.html
+++ b/lessons.html
@@ -371,21 +371,28 @@
           <div class="lesson-row">
             <div class="lesson-number">7.1</div>
             <div class="lesson-link">
-              <a href="">Making and exporting asset bundles in Unity (TO DO)</a>
+              <a href="Chapter 7/What is an asset bundle.html">What is an asset bundle?</a>
             </div>
           </div>
 
           <div class="lesson-row">
             <div class="lesson-number">7.2</div>
             <div class="lesson-link">
-              <a href="">Loading and spawning asset bundles in game (TO DO)</a>
+              <a href="Chapter 7/Making asset bundles in Unity.html">Making and exporting asset bundles in Unity</a>
             </div>
           </div>
 
           <div class="lesson-row">
             <div class="lesson-number">7.3</div>
             <div class="lesson-link">
-              <a href="">Fixing asset bundles shaders (TO DO)</a>
+              <a href="Chapter 7/Loading and spawning asset bundles in game.html">Loading and spawning asset bundles in game)</a>
+            </div>
+          </div>
+
+          <div class="lesson-row">
+            <div class="lesson-number">7.4</div>
+            <div class="lesson-link">
+              <a href="Chapter 7/Fixing asset bundles shaders.html">Fixing asset bundles shaders</a>
             </div>
           </div>
 
