--- a/lessons.html
+++ b/lessons.html
@@ -399,6 +399,36 @@
         </div>
       </article>
 
+      <article>
+          <div class="lesson-content">
+              <div class="lesson-title">
+                  <h3>Harmony</h3>
+                  <div class="lesson-chapter">Chapter 8</div>
+              </div>
+
+              <div class="lesson-row">
+                  <div class="lesson-number">8.1</div>
+                  <div class="lesson-link">
+                      <a href="Chapter 8/Introduction to harmony.html">Introduction to Harmony</a>
+                  </div>
+              </div>
+
+              <div class="lesson-row">
+                  <div class="lesson-number">8.2</div>
+                  <div class="lesson-link">
+                      <a href="Chapter 8/Using Harmony.html">Using Harmony</a>
+                  </div>
+              </div>
+
+              <div class="lesson-row">
+                  <div class="lesson-number">8.3</div>
+                  <div class="lesson-link">
+                      <a href="Chapter 8/Example mod made with harmony.html">Example mod made with Harmony</a>
+                  </div>
+              </div>
+          </div>
+      </article>
+
     </div>
   </main>
 
